# Camera-Calibrator

./: README.md  pyproject.toml  requirements.txt
camera_calibrator/: camera_calibrator.py  checker_calib.py  clip_images.py
