[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camera_calibrator"
version = "1.0.0"
authors = [
  { name="Takeshi Yoshida", email="29244885+yoshida6298@users.noreply.github.com" },
]
description = "Camera calibration tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "tqdm",
    "numpy",
    "requests",
    "questionary",
]

[project.scripts]
camera_calibrator = "camera_calibrator.camera_calibrator:main"

[project.urls]
Homepage = "https://github.com/yoshida6298/Camera-Calibrator"
Issues = "https://github.com/yoshida6298/Camera-Calibrator/issues"